--- a/composer.json
+++ b/composer.json
@@ -6,11 +6,12 @@
     "type": "project",
     "require": {
         "php": "^7.1.3",
+        "dhtmlx/connector-php": "^3.0",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
-        "laravelcollective/html": "~5.0",
-        "aginev/datagrid": "1.0.*"
+        "laravelcollective/html": "^5.6",
+        "nayjest/grids": "^1.3"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
